comment out isAdmin from all routes.  Run prettier which cleaned up all files to standardize.
