# backend/routes/index.js
@@ -6,30 +6,34 @@ const passport = require('passport');
 //    //#swagger tags=["Hello World!"]
 //    res.send('Hello World!');
 //});
-router.use("/reviews", require("./reviews"));
-router.use("/users", require("./users"));
-router.use("/orders", require("./orders"));
+router.use('/reviews', require('./reviews'));
+router.use('/users', require('./users'));
+router.use('/orders', require('./orders'));
 router.use('/api-docs', require('./swagger'));
 
 //login/logout
 router.get(
-    //#swagger.tags=['Authentication']
-    //#swagger.summary='Authenticate User using Github.  Cannot be done from here.  Visit /login'
-    //#swagger.description='This endpoint is used to login.'
-    '/login', passport.authenticate('github'), (req, res) => {});
+  //#swagger.tags=['Authentication']
+  //#swagger.summary='Authenticate User using Github.  Cannot be done from here.  Visit /login'
+  //#swagger.description='This endpoint is used to login.'
+  '/login',
+  passport.authenticate('github'),
+  (req, res) => {}
+);
 
 router.get(
-    //#swagger.tags=['Authentication']
-    //#swagger.summary='Logout Authenticated User.  Cannot be done from here.  Visit /logout'
-    //#swagger.description='This endpoint is used to logout.'
-    '/logout', function (req, res, next) {
-        req.logout(function(err) {
-            if (err) {
-                return next(err);
-            }
-            res.redirect('/');
-        });
-});
-
+  //#swagger.tags=['Authentication']
+  //#swagger.summary='Logout Authenticated User.  Cannot be done from here.  Visit /logout'
+  //#swagger.description='This endpoint is used to logout.'
+  '/logout',
+  function (req, res, next) {
+    req.logout(function (err) {
+      if (err) {
+        return next(err);
+      }
+      res.redirect('/');
+    });
+  }
+);
 
 module.exports = router;
