# backend/routes/reviews.js
@@ -1,17 +1,17 @@
-const router = require("express").Router();
-const controller = require("../controllers/reviews");
+const router = require('express').Router();
+const controller = require('../controllers/reviews');
 // const { isAuthenticated } = require("../utils/auth");
 // const { commonValidation } = require("../utils/validation");
 // const { rules: validationRules, validate } = commonValidation;
 
-router.get("/", controller.getAll);
+router.get('/', controller.getAll);
 
-router.get("/:id", controller.getSingle);
+router.get('/:id', controller.getSingle);
 
-router.post("/", controller.create);
+router.post('/', controller.create);
 
-router.put("/:id", controller.update);
+router.put('/:id', controller.update);
 
-router.delete("/:id", controller.delete);
+router.delete('/:id', controller.delete);
 
 module.exports = router;
